--- a/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPInterestViewController.xib
+++ b/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPInterestViewController.xib
@@ -51,11 +51,9 @@
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yCZ-UE-DfT">
-                            <rect key="frame" x="260" y="200" width="60" height="25"/>
-                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <state key="normal" title="JOIN">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yCZ-UE-DfT">
+                            <rect key="frame" x="280" y="208" width="32" height="32"/>
+                            <state key="normal" image="JoinGroupButton">
                                 <color key="titleColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -66,11 +64,9 @@
                                 <action selector="joinTapped:" destination="-1" eventType="touchUpInside" id="bQT-dQ-V65"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3au-Rt-fAT">
-                            <rect key="frame" x="260" y="200" width="60" height="25"/>
-                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                            <state key="normal" title="Leave">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3au-Rt-fAT">
+                            <rect key="frame" x="280" y="208" width="32" height="32"/>
+                            <state key="normal" image="LeaveGroupButton">
                                 <color key="titleColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -136,5 +132,7 @@
         <image name="ArrowUp" width="21" height="11"/>
         <image name="ArrowUpDisabled" width="21" height="11"/>
         <image name="CoverPhotoPlaceholder" width="320" height="75"/>
+        <image name="JoinGroupButton" width="32" height="32"/>
+        <image name="LeaveGroupButton" width="32" height="32"/>
     </resources>
 </document>
