--- a/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPGroupEventsCell.xib
+++ b/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPGroupEventsCell.xib
@@ -14,7 +14,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a8S-vj-5fH">
+                    <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a8S-vj-5fH">
                         <rect key="frame" x="8" y="4" width="304" height="52"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Events" translatesAutoresizingMaskIntoConstraints="NO" id="mf1-0I-4Su">
