--- a/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPGroupEventsCell.xib
+++ b/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPGroupEventsCell.xib
@@ -33,6 +33,15 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HkN-Ip-aFl">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="groupEventsButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="p4G-B4-uPI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
