--- a/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPGroupEventsCell.xib
+++ b/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPGroupEventsCell.xib
@@ -33,7 +33,7 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HkN-Ip-aFl">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HkN-Ip-aFl">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -47,6 +47,9 @@
                     </view>
                 </subviews>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="button2" destination="HkN-Ip-aFl" id="RSX-EO-slp"/>
+            </connections>
         </tableViewCell>
     </objects>
     <resources>
